fixed background for search results wrap

--- a/discord-themes/project-nova/project-nova.css
+++ b/discord-themes/project-nova/project-nova.css
@@ -1373,6 +1373,9 @@ rect[mask="url(#svg-mask-status-offline)"]{
     border-radius: 8px;
 }
 /*-----SEARCH RESULTS WRAP-----*/
+[class*="searchResultsWrap_"]{
+    background: #00f0;
+}
 .highlight{ /*highlighted queried text*/
     background: var(--accent);
     color: var(--accent-contrast);
